# DistMindAE

./: CMakeLists.txt  README.md  requirements.sh  run_server.sh
6_Zero-copy_deserialization/: drawplot.py  eval_results.txt
AE/5_Three-stage_pipeline/: drawplot.py  run_distmind_test5.sh  run_distmind_test5_remote.sh  run_test5.sh  run_test5_local.sh  run_test5_remote.sh
AE/6_Zero-copy_deserialization/: drawplot.py  run_test6.sh
AE/7_Load_balancing/: drawplot.py  run_distmind_test7.sh  run_distmind_test7_remote.sh  run_test7.sh  run_test7_local.sh  run_test7_remote.sh
AE/8_Caching/: drawplot.py  run_distmind_test8.sh  run_distmind_test8_remote.sh  run_test8.sh  run_test8_local.sh  run_test8_remote.sh
AE/9_DNN-Aware_Sharding/: drawplot.py  run_test9.sh  run_test9_local.sh  run_test9_remote.sh
benchmark/cuda/: description.txt
benchmark/model/: client.py  server.py  test.py  test_origin.py  test_reimpl.py
benchmark/shared_memory/: Makefile  create.cpp  reader.cpp  writer.cpp
benchmark/tcp/: Makefile  client.cpp  server.cpp
distmind/: CMakeLists.txt  Makefile
distmind/modelsettings/: run_deploy.sh  run_generate.sh  run_workload.sh
distmind/scripts/: run_client_max_inference.sh  run_controller.sh  run_deploy.sh  run_distmind_test2.sh  run_generate.sh  run_server.sh  run_train.sh
scripts/: run_cache.sh  run_load_balancer.sh  run_server.sh
settings/: config.sh  controller.json  mps_controller.json  ray_controller.json  storage_list.txt
source/: CMakeLists.txt
source/storage_client/: CMakeLists.txt  cli_common.hpp
test/: CMakeLists.txt
(+151 files in other folders)
